Saved Jupyter notebook 'admin's Python notebook'

--- a/ipython_notebooks/admin's Python notebook.ipynb
+++ b/ipython_notebooks/admin's Python notebook.ipynb
@@ -116,21 +116,13 @@
       "outputs": []
     },
     {
-      "execution_count": 11,
+      "execution_count": 12,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Only select the requested columns\ndf_corr_matrix \u003d df[corr_matrix_vars]\n\n# This computes the Pearson coefficient for all couples\ncorr \u003d df_corr_matrix.corr().fillna(0)\n\n# Start drawing\n\n# Generate a mask for the upper triangle\nmask \u003d np.zeros_like(corr, dtype\u003dnp.bool)\nmask[np.triu_indices_from(mask)] \u003d True\n\n# Set up the matplotlib figure\nsize \u003d max(10, len(corr.columns)/2.)\nf, ax \u003d plt.subplots(figsize\u003d(size, size))\n\n# Draw the heatmap with the mask and correct aspect ratio\nsns.heatmap(corr, mask\u003dmask, square\u003dTrue, linewidths\u003d.5, cbar_kws\u003d{\"shrink\": 0.5}, ax\u003dax)"
+        "# Only select the requested columns\ndf_corr_matrix \u003d df[corr_matrix_vars]\n\n# This computes the Pearson coefficient for all couples\ncorr \u003d df_corr_matrix.corr().fillna(0)\n\n# Start drawing\n\n# Generate a mask for the upper triangle\nmask \u003d np.zeros_like(corr, dtype\u003dnp.bool)\nmask[np.triu_indices_from(mask)] \u003d True\n\n# Set up the matplotlib figure\nsize \u003d max(10, len(corr.columns)/2.)\nf, ax \u003d plt.subplots(figsize\u003d(size, size))\n\n# Draw the heatmap with the mask and correct aspect ratio\nsns.heatmap(corr, mask\u003dmask, square\u003dTrue, linewidths\u003d.5, cbar_kws\u003d{\"shrink\": 0.5}, ax\u003dax);"
       ],
       "outputs": [
-        {
-          "output_type": "execute_result",
-          "execution_count": 11,
-          "data": {
-            "text/plain": "\u003cmatplotlib.axes._subplots.AxesSubplot at 0x114fa4ad0\u003e"
-          },
-          "metadata": {}
-        },
         {
           "output_type": "display_data",
           "data": {
